--- a/sass/_vars.scss
+++ b/sass/_vars.scss
@@ -36,7 +36,7 @@
 	$color-accent2-fg-light:	mix($color-accent2-bg, $color-accent2-fg-bold, 40%);
 
 	$color-border:				#f4f4f4;
-	$color-border-bg:			#fafafa;
+	$color-border-bg:			#a7adba;
 
 	$color-border2:				#e4e4e4;
 	$color-border2-bg:			#f4f4f4;
