--- a/sass/style.scss
+++ b/sass/style.scss
@@ -997,7 +997,7 @@ $size-header: 23em;
 /* Footer */
 
 	#footer {
-		background: #fafafa;
+		background: #a7adba;
 		border-top: 0;
 		color: #c0c0c0;
 		overflow: hidden;
